--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Hello There!</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
