--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <title>Hello There!</title>
+    <link rel="stylesheet" type="text/css" href="">
   </head>
   <body>
     
